--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
-  "description": "",
+  "description": "goit-node-js-hw-mongodb",
   "type": "module",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "eslint src/**/*.js",
-    "start": "node ./src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "EZH",
